Reconcile TouchExplorationController and TouchAccessibilityEnabler

TouchExplorationController is an event rewriter. When it's on it rewrites
lots of touch events to enable touch-screen accessibility.

TouchAccessibilityEnabler is a simple event listener. It watches for two
fingers being held down and fires some events if so, which may trigger
enabling TouchExplorationController in some cases. Rather than needing
separate logic for rewritten events, TouchExplorationController just passes
events directly to TouchAccessibilityEnabler when it's running.

This leads to problems when TouchExplorationController is enabled or disabled,
because sometimes "release" events get dropped. This causes things to stop
working from time to time after using two fingers to toggle accessibility
more than once.

Fix this by making TouchExplorationController notify TouchAccessibilityEnabler
when it's enabled and disabled so that it can stop or start listening to
events, and reset its internal state.

Bug: 756667
Change-Id: I1aa5e4867999b545fd8d1128c288b6f3b3554262