ui/chromeos/touch_exploration_controller.h
@@ -6,6 +6,7 @@
 #define UI_CHROMEOS_TOUCH_EXPLORATION_CONTROLLER_H_
 
 #include "base/macros.h"
+#include "base/memory/weak_ptr.h"
 #include "base/timer/timer.h"
 #include "base/values.h"
 #include "ui/accessibility/ax_enums.h"
@@ -182,7 +183,7 @@ class UI_CHROMEOS_EXPORT TouchExplorationController
   explicit TouchExplorationController(
       aura::Window* root_window,
       ui::TouchExplorationControllerDelegate* delegate,
-      TouchAccessibilityEnabler* touch_accessibility_enabler);
+      base::WeakPtr<TouchAccessibilityEnabler> touch_accessibility_enabler);
   ~TouchExplorationController() override;
 
   // Make synthesized touch events are anchored at this point. This is
@@ -535,7 +536,7 @@ class UI_CHROMEOS_EXPORT TouchExplorationController
   // accessibility. That handler is always running, whereas this is not,
   // but events need to be sent to TouchAccessibilityEnabler before being
   // rewritten when TouchExplorationController is running.
-  TouchAccessibilityEnabler* touch_accessibility_enabler_;
+  base::WeakPtr<TouchAccessibilityEnabler> touch_accessibility_enabler_;
 
   // Any touch exploration that both starts and ends (touch pressed, and
   // released) within this rectangle, triggers a simulated single finger tap at
